--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
           <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">תכנים</a>
           <div class="dropdown-menu m-0">
               <a href="startpage.html" class="dropdown-item">איך מתחילים</a>
-              <a href="startpage.html" class="dropdown-item">סוגי מקורות מידע</a>
-              <a href="startpage.html" class="dropdown-item">מאגרי מידע</a>
-              <a href="startpage.html" class="dropdown-item">חיפוש מאמרים</a>
-              <a href="startpage.html" class="dropdown-item">רשימה ביבליוגרפית</a>
+              <a href="s2.html" class="dropdown-item">סוגי מקורות מידע</a>
+              <a href="s3page.html" class="dropdown-item">מאגרי מידע</a>
+              <a href="st4page.html" class="dropdown-item">חיפוש מאמרים</a>
+              <a href="s5tpage.html" class="dropdown-item">רשימה ביבליוגרפית</a>
           </div>
       </div>        
       </li>
@@ -55,7 +55,8 @@
     </ul>
     <form class="form-inline mb-2 mb-md-0 d-flex">
       <input class="form-control mr-2" type="search" placeholder="חיפוש נושא" aria-label="Search" id="search-box">
-      <div id="search-dropdown" class="dropdown-menu m-0" style="display:none;"></div>
+      <div id="search-dropdown" class="dropdown-menu m-0" style="display:none;">
+      </div>
       <button class="btn btn-outline-primary" type="submit" id="search-btn">
         <i class="fa fa-search"></i>
       </button>
