--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="col-lg-6 text-center text-lg-start">
                 <h1 class="text-white mb-4 " >אתר ההדרכות הדיגיטליות של ספריית HIT</h1>
                 <p class="text-white pb-3" >כאן תוכלו ללמוד הכל על איך מחפשים מקורות אקדמיים בקלות וביעילות</p>
-                <a href="#section1" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3">למאגר ההדרכות</a>
+                <a href="#section1" class="custom-btn btn btn-light py-sm-3 px-sm-5 rounded-pill me-3">למאגר ההדרכות</a>
             </div>
             <div class="col-lg-6 text-center text-lg-start">
                 <img class="img-fluid" src="images/6263-removebg-preview.png" alt="">
