--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <!--תפריט ניווט-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-  <a class="navbar-brand" href="#">ספריית HIT</a>
+  <a class="navbar-brand" href="index.html">ספריית HIT</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
       <button class="btn btn-outline-primary" type="submit" id="search-btn">
         <i class="fa fa-search"></i>
       </button>
-      <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:3rem!important;">
+      <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;">
       </div>
     </form>
   </div>
@@ -88,13 +88,12 @@
      </div>
     </div>
   </header>
-   <Main>
-  
-  <div class="container">
+  <main class="container mt-5">
+    <div class="container">
     <div class="section-title position-relative text-center mb-5 pb-2">
       <h6 class="position-relative d-inline text-primary ps-4">הדרכות דיגיטליות</h6>
       <h2 class="mt-2">מה תרצו ללמוד היום?</h2>
-  </div>
+      </div>
   <section id="section1"></section>
   <div class="row">
     <div class="col-sm-4 pb-4">
@@ -103,7 +102,7 @@
         <img src="images/10088.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">איך מתחילים</h5>
-          <p class="card-text">כיצד להגיע לפורטל הספרייה דרך עמדת המידע, כניסה והצגת הממשק, היכרות עם קטלוג הספרייה הצגת אפשרויות החיפוש .
+          <p class="card-text">כיצד להגיע לפורטל הספרייה דרך עמדת המידע, כניסה והצגת הממשק, היכרות עם קטלוג הספרייה
           </p>
         </div>
       </div>
@@ -115,7 +114,7 @@
         <img src="images/6263.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">סוגי מקורות מידע</h5>
-          <p class="card-text"> מבנה של מאמר אקדמי, סוגי מקורות מידע, ספר, פרויקטי גמר. אמינות של מקור מידע - הערכת מידע באינטרנט. 
+          <p class="card-text"> מבנה של מאמר אקדמי, סוגי מקורות מידע, ספר, פרויקטי גמר. הערכת מידע באינטרנט. 
           </p>
         </div>
       </div>
@@ -127,7 +126,7 @@
         <img src="images/10088.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">מאגרי מידע</h5>
-          <p class="card-text">מהו מאגר מידע, רשימה של כלל מאגרי המידע הקיימים, היכרות עם מאגרי מידע על פי תחומים, הבדלים בין מאגרים, יתרונות וחסרונות.
+          <p class="card-text">מהו מאגר מידע, רשימה של כלל מאגרי המידע הקיימים, היכרות עם מאגרי מידע על פי תחומים.
           </p>
         </div>
       </div>
@@ -139,7 +138,7 @@
         <img src="images/6263.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">חיפוש מאמרים</h5>
-          <p class="card-text">חיפוש יעיל ונכון בשפה האנגלית, שיטות ואסטרטגיות לחיפוש יעיל אופרטורים בוליאניים מסמך המסכם לוגיקה בוליאנית, מילות מפתח 
+          <p class="card-text">חיפוש יעיל ונכון בשפה האנגלית, שיטות ואסטרטגיות לחיפוש יעיל אופרטורים, לוגיקה בוליאנית, מילות מפתח 
           </p>
         </div>
       </div>
@@ -151,7 +150,7 @@
         <img src="images/6263.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">רשימה ביבליוגרפית</h5>
-          <p class="card-text">מה הסגנונות לכתיבת רשימה ביביליוגרפית, כללי ציטוט, כלים טכנולוגיים ליצירת רשימה ביבליוגרפית.
+          <p class="card-text"> הסגנונות לכתיבת רשימה ביביליוגרפית, כללי ציטוט, כלים טכנולוגיים ליצירת רשימה ביבליוגרפית.
           </p>
         </div>
       </div>
@@ -159,7 +158,6 @@
     </div>
   </div>
 </div>
-<!--TOAST-->
 </Main>
 
 
