--- a/startpage.html
+++ b/startpage.html
@@ -23,6 +23,7 @@
 </head>
 <body lang="he" dir="rtl" class="position-relative">
 
+
 <!--תפריט ניווט-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
   <a class="navbar-brand" href="index.html">ספריית HIT</a>
@@ -39,11 +40,11 @@
         <div class="nav-item dropdown">
           <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">תכנים</a>
           <div class="dropdown-menu m-0">
-              <a href="#" class="dropdown-item">איך מתחילים</a>
-              <a href="#" class="dropdown-item">סוגי מקורות מידע</a>
-              <a href="#" class="dropdown-item">מאגרי מידע</a>
-              <a href="#" class="dropdown-item">חיפוש מאמרים</a>
-              <a href="#" class="dropdown-item">רשימה ביבליוגרפית</a>
+              <a href="startpage.html" class="dropdown-item">איך מתחילים</a>
+              <a href="s2.html" class="dropdown-item">סוגי מקורות מידע</a>
+              <a href="s3page.html" class="dropdown-item">מאגרי מידע</a>
+              <a href="st4page.html" class="dropdown-item">חיפוש מאמרים</a>
+              <a href="s5tpage.html" class="dropdown-item">רשימה ביבליוגרפית</a>
           </div>
       </div>        
       </li>
@@ -56,26 +57,105 @@
       <button class="btn btn-outline-primary" type="submit" id="search-btn">
         <i class="fa fa-search"></i>
       </button>
+      <div id="search-dropdown" class="dropdown-menu m-0 position-absolute" style="display:none;margin-top:2.5rem!important;">
+      </div>
     </form>
   </div>
 </nav>
-<!--סוף תפפיט ניווט-->
+
+
+
+
+<!--תפריט ניווט סוף-->
+
 
 <header>
 <div class="header">
-  <div class="container-xxl py-5  hero-header mb-5">
-    
-    <div class="container my-5 py-5 px-lg-5">
+  <div class="headerinpage">
+  <div class="container-xxl py-5 hero-header  mt-4">
+    <!--פירורי לחם-->
+    <nav aria-label="breadcrumb ">
+      <ol class="breadcrumb justify-content-start">
+        <li class="breadcrumb-item active"><a href="index.html" class="my-link">ראשי</a></li>
+        <li class="breadcrumb-item" aria-current="page">איך מתחילים</li>
+       </ol>
+       </nav> 
+        <!--סוף פירורי לחם-->
+   <div class="container my-5 py-5 px-lg-5">
         <div class="row g-5 py-5">
-           
+          <div class="container">  
+            <div class="section-title position-relative text-center mb-5 pb-2">
+              <h1 >איך מתחילים לחפש?</h1>                
+          </div>
         </div>
-    </div>
+     </div>
      </div>
     </div>
-  </header>
-   <Main>
- 
+  </div>
+   </div>
+   </header>    
+   <Main class="p-4">
+    <h4 class="p-3">בחרו נושא ללמידה</h4>
+    <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-center align-items-center">
+      <div class="col">
+        <div class="card">
+          <div class="cardInnerPage">
+          <img src="/images/WhatsApp Image 2023-02-09 at 09.54.35.jpeg" class="card-img-top" alt="..." style="padding: 10px;">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">סרטון</h5>
+            <p class="card-text"> כיצד להגיע לפורטל הספרייה דרך עמדת המידע</p>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <div class="cardInnerPage">
+          <img src="/images/20230209_100947.jpg" class="card-img-top" alt="..." style="padding: 10px;">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">מסמך</h5>
+            <p class="card-text">היכרות עם קטלוג הספרייה</p>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <div class="cardInnerPage">
+          <img src="/images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">לומדה</h5>
+            <p class="card-text">אפשרויות החיפוש בקטלוג הספרייה</p>
+          </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <div class="cardInnerPage">
+          <img src="/images/20230209_095418.jpg" class="card-img-top" alt="..." style="padding: 10px;">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">מה ניתן למצוא בספרייה</h5>
+            <p class="card-text">חיפוש ספרים, מאמרים, פרויקטי גמר</p>
+          </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <div class="cardInnerPage">
+          <img src="/images/20230209_095204.jpg" class="card-img-top" alt="..." style="padding: 10px;">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">לאתר הספרייה</h5>
+            <p class="card-text">ספריית HIT </p>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
 </Main>
+
+  
 
 <footer class="bg-light py-3">
   <div class="container">
