--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="keywords" content="טכנולוגיות למידה, הדרכות " />
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--לוגו עמוד-->
+   <!-- <link rel="shortcut icon" type="image/png" href="">
+  <link rel="icon" type="image/png" href="">-->
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
@@ -35,7 +38,7 @@
   <div class="collapse navbar-collapse mt-3 mt-md-0" id="navbarTogglerDemo01">
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
-        <a class="nav-link" href="#">אודות</a>
+        <a class="nav-link" href="about.html">אודות</a>
       </li>
       <li class="nav-item">
         <div class="nav-item dropdown">
