--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
     <nav aria-label="breadcrumb ">
       <ol class="breadcrumb justify-content-start">
         <li class="breadcrumb-item active"><a href="index.html" class="my-link">ראשי</a></li>
-        <li class="breadcrumb-item" aria-current="page">איך מתחילים</li>
+        <li class="breadcrumb-item" aria-current="page">אודות</li>
        </ol>
        </nav> 
         <!--סוף פירורי לחם-->
@@ -85,7 +85,7 @@
         <div class="row g-5 py-5">
           <div class="container">  
             <div class="section-title position-relative text-center mb-5 pb-2">
-              <h1 >איך מתחילים לחפש?</h1>                
+              <h1 >אודות</h1>                
           </div>
         </div>
      </div>
@@ -94,65 +94,8 @@
   </div>
    </div>
    </header>    
-   <Main class="p-4">
-    <h4 class="p-3">בחרו נושא ללמידה</h4>
-    <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-center align-items-center">
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/WhatsApp Image 2023-02-09 at 09.54.35.jpeg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">סרטון</h5>
-            <p class="card-text"> כיצד להגיע לפורטל הספרייה דרך עמדת המידע</p>
-          </div>
-        </div>
-      </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/20230209_100947.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">מסמך</h5>
-            <p class="card-text">היכרות עם קטלוג הספרייה</p>
-          </div>
-        </div>
-      </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">לומדה</h5>
-            <p class="card-text">אפשרויות החיפוש בקטלוג הספרייה</p>
-          </div>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/20230209_095418.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">מה ניתן למצוא בספרייה</h5>
-            <p class="card-text">חיפוש ספרים, מאמרים, פרויקטי גמר</p>
-          </div>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/20230209_095204.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">לאתר הספרייה</h5>
-            <p class="card-text">ספריית HIT </p>
-          </div>
-        </div>
-        </div>
-      </div>
-    </div>
+   <Main>
+      
 </Main>
 
   
