--- a/about.html
+++ b/about.html
@@ -41,10 +41,10 @@
           <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">תכנים</a>
           <div class="dropdown-menu m-0">
               <a href="startpage.html" class="dropdown-item">איך מתחילים</a>
-              <a href="s2.html" class="dropdown-item">סוגי מקורות מידע</a>
-              <a href="s3page.html" class="dropdown-item">מאגרי מידע</a>
-              <a href="st4page.html" class="dropdown-item">חיפוש מאמרים</a>
-              <a href="s5tpage.html" class="dropdown-item">רשימה ביבליוגרפית</a>
+              <a href="resourcesTypes.html" class="dropdown-item">סוגי מקורות מידע</a>
+              <a href="dataBases.html" class="dropdown-item">מאגרי מידע</a>
+              <a href="searchingArticles.html" class="dropdown-item">חיפוש מאמרים</a>
+              <a href="bibList.html" class="dropdown-item">רשימה ביבליוגרפית</a>
           </div>
       </div>        
       </li>
@@ -104,9 +104,9 @@
   <div class="container">
     <p class="text-center text-secondary">Copyright &copy; עוצב ופותח על ידי קורל ששון ודולב קליינר במסגרת פרוייקט גמר- טכנולוגיות למידה 2023</p>
     <div class="d-flex justify-content-center">
-      <a class="text-secondary mx-3" href="#">אודות</a>
-      <a class="text-secondary mx-3" href="#">תכנים</a>
-      <a class="text-secondary mx-3" href="#">לחיפוש בספרייה</a>
+      <a class="text-secondary mx-3" href="about.html">אודות</a>
+      <a class="text-secondary mx-3" href="index.html">תכנים</a>
+      <a class="text-secondary mx-3" href="index.html">לחיפוש בספרייה</a>
     </div>
   </div>
 </footer>
