--- a/dataBases.html
+++ b/dataBases.html
@@ -77,7 +77,7 @@
     <nav aria-label="breadcrumb ">
       <ol class="breadcrumb justify-content-start">
         <li class="breadcrumb-item active"><a href="index.html" class="my-link">ראשי</a></li>
-        <li class="breadcrumb-item" aria-current="page">איך מתחילים</li>
+        <li class="breadcrumb-item" aria-current="page">מאגרי מידע</li>
        </ol>
        </nav> 
         <!--סוף פירורי לחם-->
@@ -85,7 +85,7 @@
         <div class="row g-5 py-5">
           <div class="container">  
             <div class="section-title position-relative text-center mb-5 pb-2">
-              <h1 >איך מתחילים לחפש?</h1>                
+              <h1 >מאגרי מידע</h1>                
           </div>
         </div>
      </div>
@@ -103,7 +103,7 @@
           <img src="/images/WhatsApp Image 2023-02-09 at 09.54.35.jpeg" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
             <h5 class="card-title">סרטון</h5>
-            <p class="card-text"> כיצד להגיע לפורטל הספרייה דרך עמדת המידע</p>
+            <p class="card-text">מהו מאגר מידע</p>
           </div>
         </div>
       </div>
@@ -114,7 +114,7 @@
           <img src="/images/20230209_100947.jpg" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
             <h5 class="card-title">מסמך</h5>
-            <p class="card-text">היכרות עם קטלוג הספרייה</p>
+            <p class="card-text">רשימה של כלל מאגרי המידע הקיימים</p>
           </div>
         </div>
       </div>
@@ -125,7 +125,7 @@
           <img src="/images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
             <h5 class="card-title">לומדה</h5>
-            <p class="card-text">אפשרויות החיפוש בקטלוג הספרייה</p>
+            <p class="card-text">היכרות עם מאגרי מידע על פי תחומים</p>
           </div>
           </div>
         </div>
@@ -135,8 +135,8 @@
           <div class="cardInnerPage">
           <img src="/images/20230209_095418.jpg" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">מה ניתן למצוא בספרייה</h5>
-            <p class="card-text">חיפוש ספרים, מאמרים, פרויקטי גמר</p>
+            <h5 class="card-title">לומדה</h5>
+            <p class="card-text">הבדלים בין מאגרים</p>
           </div>
           </div>
         </div>
@@ -146,8 +146,8 @@
           <div class="cardInnerPage">
           <img src="/images/20230209_095204.jpg" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">לאתר הספרייה</h5>
-            <p class="card-text">ספריית HIT </p>
+            <h5 class="card-title">מידע על מאגרי מידע</h5>
+            <p class="card-text">יתרונות וחסרונות</p>
           </div>
         </div>
         </div>
@@ -161,9 +161,9 @@
   <div class="container">
     <p class="text-center text-secondary">Copyright &copy; עוצב ופותח על ידי קורל ששון ודולב קליינר במסגרת פרוייקט גמר- טכנולוגיות למידה 2023</p>
     <div class="d-flex justify-content-center">
-      <a class="text-secondary mx-3" href="about.html">אודות</a>
-      <a class="text-secondary mx-3" href="index.html">תכנים</a>
-      <a class="text-secondary mx-3" href="index.html">לחיפוש בספרייה</a>
+      <a class="text-secondary mx-3" href="#">אודות</a>
+      <a class="text-secondary mx-3" href="#">תכנים</a>
+      <a class="text-secondary mx-3" href="#">לחיפוש בספרייה</a>
     </div>
   </div>
 </footer>
