--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -77,7 +77,7 @@
     <nav aria-label="breadcrumb ">
       <ol class="breadcrumb justify-content-start">
         <li class="breadcrumb-item active"><a href="index.html" class="my-link">ראשי</a></li>
-        <li class="breadcrumb-item" aria-current="page">איך מתחילים</li>
+        <li class="breadcrumb-item" aria-current="page">חיפוש מאמרים</li>
        </ol>
        </nav> 
         <!--סוף פירורי לחם-->
@@ -85,7 +85,7 @@
         <div class="row g-5 py-5">
           <div class="container">  
             <div class="section-title position-relative text-center mb-5 pb-2">
-              <h1 >איך מתחילים לחפש?</h1>                
+              <h1 >חיפוש מאמרים</h1>                
           </div>
         </div>
      </div>
