--- a/bibList.html
+++ b/bibList.html
@@ -77,7 +77,7 @@
     <nav aria-label="breadcrumb ">
       <ol class="breadcrumb justify-content-start">
         <li class="breadcrumb-item active"><a href="index.html" class="my-link">ראשי</a></li>
-        <li class="breadcrumb-item" aria-current="page">איך מתחילים</li>
+        <li class="breadcrumb-item" aria-current="page">רשימה ביבליוגרפית</li>
        </ol>
        </nav> 
         <!--סוף פירורי לחם-->
@@ -85,7 +85,7 @@
         <div class="row g-5 py-5">
           <div class="container">  
             <div class="section-title position-relative text-center mb-5 pb-2">
-              <h1 >איך מתחילים לחפש?</h1>                
+              <h1 >רשימה ביבליוגרפית</h1>                
           </div>
         </div>
      </div>
@@ -103,7 +103,7 @@
           <img src="/images/WhatsApp Image 2023-02-09 at 09.54.35.jpeg" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
             <h5 class="card-title">סרטון</h5>
-            <p class="card-text"> כיצד להגיע לפורטל הספרייה דרך עמדת המידע</p>
+            <p class="card-text"> חובות הסטודנט</p>
           </div>
         </div>
       </div>
@@ -114,7 +114,7 @@
           <img src="/images/20230209_100947.jpg" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
             <h5 class="card-title">מסמך</h5>
-            <p class="card-text">היכרות עם קטלוג הספרייה</p>
+            <p class="card-text">מטרות הרשימה הביבליוגרפית</p>
           </div>
         </div>
       </div>
@@ -125,7 +125,7 @@
           <img src="/images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
             <h5 class="card-title">לומדה</h5>
-            <p class="card-text">אפשרויות החיפוש בקטלוג הספרייה</p>
+            <p class="card-text">כללי ציטוט</p>
           </div>
           </div>
         </div>
@@ -135,8 +135,8 @@
           <div class="cardInnerPage">
           <img src="/images/20230209_095418.jpg" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">מה ניתן למצוא בספרייה</h5>
-            <p class="card-text">חיפוש ספרים, מאמרים, פרויקטי גמר</p>
+            <h5 class="card-title">מיני לומדה</h5>
+            <p class="card-text">כלים טכנולוגיים לרשימה ביבליוגרפית</p>
           </div>
           </div>
         </div>
