--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">תכנים</a>
           <div class="dropdown-menu m-0">
               <a href="startpage.html" class="dropdown-item">איך מתחילים</a>
-              <a href="s2.html" class="dropdown-item">סוגי מקורות מידע</a>
+              <a href="resourcesTypes.html" class="dropdown-item">סוגי מקורות מידע</a>
               <a href="s3page.html" class="dropdown-item">מאגרי מידע</a>
-              <a href="st4page.html" class="dropdown-item">חיפוש מאמרים</a>
-              <a href="s5tpage.html" class="dropdown-item">רשימה ביבליוגרפית</a>
+              <a href="searchingArticles.html" class="dropdown-item">חיפוש מאמרים</a>
+              <a href="bibList.html" class="dropdown-item">רשימה ביבליוגרפית</a>
           </div>
       </div>        
       </li>
@@ -101,6 +101,7 @@
   <div class="row">
     <div class="col-sm-4 pb-4">
       <div class="card-wrapper">
+        <a href="startpage.html"  class="text-decoration-none">
       <div class="card" style="animation: fadein 1.5s;">
         <img src="images/10088.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -109,10 +110,12 @@
           </p>
         </div>
       </div>
+        </a>
     </div>
     </div>
     <div class="col-sm-4 pb-4">
       <div class="card-wrapper">
+        <a href="resourcesTypes.html"  class="text-decoration-none">
       <div class="card" style="animation: fadein 1.5s;">
         <img src="images/6263.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -121,10 +124,12 @@
           </p>
         </div>
       </div>
+        </a>
       </div>
     </div>
     <div class="col-sm-4 pb-4">
       <div class="card-wrapper">
+        <a href="resourcesTypes.html"  class="text-decoration-none">
       <div class="card" style="animation: fadein 2s;">
         <img src="images/10088.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -133,10 +138,12 @@
           </p>
         </div>
       </div>
+        </a>
       </div>
     </div>
     <div class="col-sm-4 pb-4">
       <div class="card-wrapper">
+        <a href="searchingArticles.html"  class="text-decoration-none">
       <div class="card" style="animation: fadein 2.5s;">
         <img src="images/6263.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -145,10 +152,12 @@
           </p>
         </div>
       </div>
+        </a>
       </div>
     </div>
     <div class="col-sm-4 pb-4">
       <div class="card-wrapper">
+        <a href="bibList.html"  class="text-decoration-none">
       <div class="card" style="animation: fadein 3s;">
         <img src="images/6263.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -157,6 +166,7 @@
           </p>
         </div>
       </div>
+        </a>
     </div>
     </div>
   </div>
@@ -168,9 +178,9 @@
   <div class="container">
     <p class="text-center text-secondary">Copyright &copy; עוצב ופותח על ידי קורל ששון ודולב קליינר במסגרת פרוייקט גמר- טכנולוגיות למידה 2023</p>
     <div class="d-flex justify-content-center">
-      <a class="text-secondary mx-3" href="#">אודות</a>
-      <a class="text-secondary mx-3" href="#">תכנים</a>
-      <a class="text-secondary mx-3" href="#">לחיפוש בספרייה</a>
+      <a class="text-secondary mx-3" href="about.html">אודות</a>
+      <a class="text-secondary mx-3" href="index.html">תכנים</a>
+      <a class="text-secondary mx-3" href="index.html">לחיפוש בספרייה</a>
     </div>
   </div>
   </footer>
