--- a/resourcesTypes.html
+++ b/resourcesTypes.html
@@ -77,7 +77,7 @@
     <nav aria-label="breadcrumb ">
       <ol class="breadcrumb justify-content-start">
         <li class="breadcrumb-item active"><a href="index.html" class="my-link">ראשי</a></li>
-        <li class="breadcrumb-item" aria-current="page">איך מתחילים</li>
+        <li class="breadcrumb-item" aria-current="page">מקורות מידע</li>
        </ol>
        </nav> 
         <!--סוף פירורי לחם-->
@@ -85,7 +85,7 @@
         <div class="row g-5 py-5">
           <div class="container">  
             <div class="section-title position-relative text-center mb-5 pb-2">
-              <h1 >איך מתחילים לחפש?</h1>                
+              <h1 >מקורות מידע</h1>                
           </div>
         </div>
      </div>
@@ -161,7 +161,7 @@
   <div class="container">
     <p class="text-center text-secondary">Copyright &copy; עוצב ופותח על ידי קורל ששון ודולב קליינר במסגרת פרוייקט גמר- טכנולוגיות למידה 2023</p>
     <div class="d-flex justify-content-center">
-      <a class="text-secondary mx-3" href="about.html">אודות</a>
+        <a class="text-secondary mx-3" href="about.html">אודות</a>
       <a class="text-secondary mx-3" href="index.html">תכנים</a>
       <a class="text-secondary mx-3" href="index.html">לחיפוש בספרייה</a>
     </div>
