--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
 <!--תפריט ניווט-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-  <a class="navbar-brand" href="index.html">ספריית HIT</a>
+  <a class="navbar-brand" href="index.html">
+    <img src="images/Logo 3.png" alt="לוגו">
+  </a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -79,12 +81,13 @@
     <div class="container my-5 py-5 px-lg-5">
         <div class="row g-5 py-5">
             <div class="col-lg-6 text-center text-lg-start">
-                <h1 class="text-white mb-4 " >אתר ההדרכות הדיגיטליות של ספריית HIT</h1>
-                <p class="text-white pb-3" >כאן תוכלו ללמוד הכל על איך מחפשים מקורות אקדמיים בקלות וביעילות</p>
+                <h1 class="text-white mb-4 " >כיף שהצטרפתם!</h1>
+                <p class="text-white pb-3" >ברוכים הבאים לאתר הלימודי<br/>
+ של ספריית המכון הטכנולוגי HIT</p>
                 <a href="#section1" class="custom-btn btn btn-light py-sm-3 px-sm-5 rounded-pill me-3">למאגר ההדרכות</a>
             </div>
             <div class="col-lg-6 text-center text-lg-start">
-                <img class="img-fluid" src="images/6263-removebg-preview.png" alt="">
+                <img class="img-fluid" src="images/MainpageImage.png" alt="books">
             </div>
         </div>
     </div>
