--- a/about.html
+++ b/about.html
@@ -26,7 +26,9 @@
 
 <!--תפריט ניווט-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-  <a class="navbar-brand" href="index.html">ספריית HIT</a>
+  <a class="navbar-brand" href="index.html">
+    <img src="images/Logo 3.png" alt="לוגו">
+  </a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
