--- a/startpage.html
+++ b/startpage.html
@@ -26,7 +26,9 @@
 
 <!--תפריט ניווט-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-  <a class="navbar-brand" href="index.html">ספריית HIT</a>
+  <a class="navbar-brand" href="index.html">
+    <img src="images/Logo 3.png" alt="לוגו">
+  </a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -100,10 +102,10 @@
       <div class="col">
         <div class="card">
           <div class="cardInnerPage">
-          <img src="/images/WhatsApp Image 2023-02-09 at 09.54.35.jpeg" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="/images/Group 84.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">סרטון</h5>
-            <p class="card-text"> כיצד להגיע לפורטל הספרייה דרך עמדת המידע</p>
+            <h5 class="card-title">פורטל הספרייה</h5>
+            <p class="card-text">היכרות בסיסית עם הפורטל והסבר על אופן ההתחברות מעמדת המידע</p>
           </div>
         </div>
       </div>
@@ -111,47 +113,16 @@
       <div class="col">
         <div class="card">
           <div class="cardInnerPage">
-          <img src="/images/20230209_100947.jpg" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="/images/Group 85.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">מסמך</h5>
-            <p class="card-text">היכרות עם קטלוג הספרייה</p>
+            <h5 class="card-title">קטלוג הספרייה</h5>
+            <p class="card-text">היכרות בסיסית עם קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו:חיפוש ספרים, מאמרים ופרויקטי גמר</p>
           </div>
         </div>
       </div>
       </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">לומדה</h5>
-            <p class="card-text">אפשרויות החיפוש בקטלוג הספרייה</p>
-          </div>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/20230209_095418.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">מה ניתן למצוא בספרייה</h5>
-            <p class="card-text">חיפוש ספרים, מאמרים, פרויקטי גמר</p>
-          </div>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/20230209_095204.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">לאתר הספרייה</h5>
-            <p class="card-text">ספריית HIT </p>
-          </div>
-        </div>
-        </div>
-      </div>
+     
+   
     </div>
 </Main>
 
