--- a/bibList.html
+++ b/bibList.html
@@ -26,7 +26,9 @@
 
 <!--תפריט ניווט-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-  <a class="navbar-brand" href="index.html">ספריית HIT</a>
+  <a class="navbar-brand" href="index.html">
+    <img src="images/Logo 3.png" alt="לוגו">
+  </a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -84,9 +86,10 @@
    <div class="container my-5 py-5 px-lg-5">
         <div class="row g-5 py-5">
           <div class="container">  
-            <div class="section-title position-relative text-center mb-5 pb-2">
-              <h1 >רשימה ביבליוגרפית</h1>                
+            <div class="section-title position-relative text-start mb-5 pb-2">
+              <h2>רשימה ביבליוגרפית</h2>                
           </div>
+          <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
         </div>
      </div>
      </div>
@@ -95,15 +98,19 @@
    </div>
    </header>    
    <Main class="p-4">
-    <h4 class="p-3">בחרו נושא ללמידה</h4>
     <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-center align-items-center">
       <div class="col">
         <div class="card">
           <div class="cardInnerPage">
-          <img src="/images/WhatsApp Image 2023-02-09 at 09.54.35.jpeg" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="/images/Group 99.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">סרטון</h5>
-            <p class="card-text"> חובות הסטודנט</p>
+            <h5 class="card-title">כללי ציטוט</h5>
+            <p class="card-text">הרחבה על כתיבת כללי ציטוט ברשימה הביבליוגרפית</p>
+          </div>
+          <div class="p-3">
+            <span class="badge badge-pill badge-light w-auto">מסמך מסכם</span>
+            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
+              3 דקות</span> 
           </div>
         </div>
       </div>
@@ -111,47 +118,21 @@
       <div class="col">
         <div class="card">
           <div class="cardInnerPage">
-          <img src="/images/20230209_100947.jpg" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="/images/Group 100.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">מסמך</h5>
-            <p class="card-text">מטרות הרשימה הביבליוגרפית</p>
+            <h5 class="card-title">שימוש בכלים טכנולוגיים</h5>
+            <p class="card-text">יצירת רשימה ביביליוגרפית בקלות וביעילות באמצעות כלים טכנולוגיים יעודיים</p>
+          </div>
+          <div class="p-3">
+            <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
+            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
+              3 דקות</span> 
           </div>
         </div>
       </div>
       </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">לומדה</h5>
-            <p class="card-text">כללי ציטוט</p>
-          </div>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/20230209_095418.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">מיני לומדה</h5>
-            <p class="card-text">כלים טכנולוגיים לרשימה ביבליוגרפית</p>
-          </div>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/20230209_095204.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">לאתר הספרייה</h5>
-            <p class="card-text">ספריית HIT </p>
-          </div>
-        </div>
-        </div>
-      </div>
+
+  
     </div>
 </Main>
 
