--- a/dataBases.html
+++ b/dataBases.html
@@ -12,6 +12,11 @@
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
     <link href="styles/myStyle.css" rel="stylesheet" />
+
+ <!--פונט רוביק-->
+ <style>
+  @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap');
+</style>
   <!-- Icon Font Stylesheet -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -20,13 +25,16 @@
     <script src="jScripts/bootstrap.bundle.min.js"></script>
     <script src="jScripts/javascript.js"></script>
 
+   
 </head>
 <body lang="he" dir="rtl" class="position-relative">
 
 
 <!--תפריט ניווט-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-  <a class="navbar-brand" href="index.html">ספריית HIT</a>
+  <a class="navbar-brand" href="index.html">
+    <img src="images/Logo 3.png" alt="לוגו">
+  </a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -84,9 +92,10 @@
    <div class="container my-5 py-5 px-lg-5">
         <div class="row g-5 py-5">
           <div class="container">  
-            <div class="section-title position-relative text-center mb-5 pb-2">
-              <h1 >מאגרי מידע</h1>                
+            <div class="section-title position-relative text-start mb-5 pb-2">
+              <h2 >מאגרי מידע</h2>                
           </div>
+          <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
         </div>
      </div>
      </div>
@@ -95,15 +104,20 @@
    </div>
    </header>    
    <Main class="p-4">
-    <h4 class="p-3">בחרו נושא ללמידה</h4>
+   
     <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-center align-items-center">
       <div class="col">
         <div class="card">
           <div class="cardInnerPage">
-          <img src="/images/WhatsApp Image 2023-02-09 at 09.54.35.jpeg" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="/images/Group 89.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">סרטון</h5>
-            <p class="card-text">מהו מאגר מידע</p>
+            <h5 class="card-title">מהו מאגר מידע?</h5>
+            <p class="card-text">הסבר על מאגרי מידע ומאפיינים</p>
+          </div>
+          <div class="p-3">
+            <span class="badge badge-pill badge-light w-auto">לומדה</span>
+            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
+              3 דקות</span> 
           </div>
         </div>
       </div>
@@ -111,10 +125,15 @@
       <div class="col">
         <div class="card">
           <div class="cardInnerPage">
-          <img src="/images/20230209_100947.jpg" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="/images/Group 90.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">מסמך</h5>
-            <p class="card-text">רשימה של כלל מאגרי המידע הקיימים</p>
+            <h5 class="card-title">מאגרי מידע על פי תחומי דעת</h5>
+            <p class="card-text">טבלה המסדרת את מאגרי המידע הנפוצים לפי אשכולות לימוד</p>
+          </div>
+          <div class="p-3">
+            <span class="badge badge-pill badge-light w-auto">טבלה</span>
+            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
+              2 דקות</span> 
           </div>
         </div>
       </div>
@@ -122,34 +141,17 @@
       <div class="col">
         <div class="card">
           <div class="cardInnerPage">
-          <img src="/images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
+          <img src="/images/Group 91.png"src="/images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">לומדה</h5>
-            <p class="card-text">היכרות עם מאגרי מידע על פי תחומים</p>
+            <h5 class="card-title">הבדלים בין מאגרי מידע</h5>
+            <p class="card-text">הסבר על ההבדלים הבולטים בין המאגרים השונים כולל יתרונות וחסרונות של כל מאגר מידע</p>
+          </div>
+          <div class="p-3">
+            <span class="badge badge-pill badge-light w-auto">לומדה</span>
+            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
+              3 דקות</span> 
           </div>
           </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/20230209_095418.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">לומדה</h5>
-            <p class="card-text">הבדלים בין מאגרים</p>
-          </div>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="cardInnerPage">
-          <img src="/images/20230209_095204.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">מידע על מאגרי מידע</h5>
-            <p class="card-text">יתרונות וחסרונות</p>
-          </div>
-        </div>
         </div>
       </div>
     </div>
