--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
     <link href="styles/myStyle.css" rel="stylesheet" />
+    
   <!-- Icon Font Stylesheet -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -48,7 +49,7 @@
           <div class="dropdown-menu m-0">
               <a href="startpage.html" class="dropdown-item">איך מתחילים</a>
               <a href="resourcesTypes.html" class="dropdown-item">סוגי מקורות מידע</a>
-              <a href="s3page.html" class="dropdown-item">מאגרי מידע</a>
+              <a href="dataBases.html" class="dropdown-item">מאגרי מידע</a>
               <a href="searchingArticles.html" class="dropdown-item">חיפוש מאמרים</a>
               <a href="bibList.html" class="dropdown-item">רשימה ביבליוגרפית</a>
           </div>
@@ -77,14 +78,12 @@
 <header>
 <div class="header">
   <div class="container-xxl py-5  hero-header mb-5">
-
     <div class="container my-5 py-5 px-lg-5">
         <div class="row g-5 py-5">
             <div class="col-lg-6 text-center text-lg-start">
                 <h1 class="text-white mb-4 " >כיף שהצטרפתם!</h1>
                 <p class="text-white pb-3" >ברוכים הבאים לאתר הלימודי<br/>
  של ספריית המכון הטכנולוגי HIT</p>
-                <a href="#section1" class="custom-btn btn btn-light py-sm-3 px-sm-5 rounded-pill me-3">למאגר ההדרכות</a>
             </div>
             <div class="col-lg-6 text-center text-lg-start">
                 <img class="img-fluid" src="images/MainpageImage.png" alt="books">
@@ -106,7 +105,7 @@
       <div class="card-wrapper">
         <a href="startpage.html"  class="text-decoration-none">
       <div class="card" style="animation: fadein 1.5s;">
-        <img src="images/10088.jpg" class="card-img-top" alt="...">
+        <img src="images/Group 103.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">איך מתחילים</h5>
           <p class="card-text">כיצד להגיע לפורטל הספרייה דרך עמדת המידע, כניסה והצגת הממשק, היכרות עם קטלוג הספרייה
@@ -120,7 +119,7 @@
       <div class="card-wrapper">
         <a href="resourcesTypes.html"  class="text-decoration-none">
       <div class="card" style="animation: fadein 1.5s;">
-        <img src="images/6263.jpg" class="card-img-top" alt="...">
+        <img src="images/Group 105.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">סוגי מקורות מידע</h5>
           <p class="card-text"> מבנה של מאמר אקדמי, סוגי מקורות מידע, ספר, פרויקטי גמר. הערכת מידע באינטרנט. 
@@ -134,7 +133,7 @@
       <div class="card-wrapper">
         <a href="resourcesTypes.html"  class="text-decoration-none">
       <div class="card" style="animation: fadein 2s;">
-        <img src="images/10088.jpg" class="card-img-top" alt="...">
+        <img src="images/Group 106.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">מאגרי מידע</h5>
           <p class="card-text">מהו מאגר מידע, רשימה של כלל מאגרי המידע הקיימים, היכרות עם מאגרי מידע על פי תחומים.
@@ -148,7 +147,7 @@
       <div class="card-wrapper">
         <a href="searchingArticles.html"  class="text-decoration-none">
       <div class="card" style="animation: fadein 2.5s;">
-        <img src="images/6263.jpg" class="card-img-top" alt="...">
+        <img src="images/Group 108.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">חיפוש מאמרים</h5>
           <p class="card-text">חיפוש יעיל ונכון בשפה האנגלית, שיטות ואסטרטגיות לחיפוש יעיל אופרטורים, לוגיקה בוליאנית, מילות מפתח 
@@ -162,7 +161,7 @@
       <div class="card-wrapper">
         <a href="bibList.html"  class="text-decoration-none">
       <div class="card" style="animation: fadein 3s;">
-        <img src="images/6263.jpg" class="card-img-top" alt="...">
+        <img src="images/Group 109.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">רשימה ביבליוגרפית</h5>
           <p class="card-text"> הסגנונות לכתיבת רשימה ביביליוגרפית, כללי ציטוט, כלים טכנולוגיים ליצירת רשימה ביבליוגרפית.
