--- a/resourcesTypes.html
+++ b/resourcesTypes.html
@@ -86,9 +86,10 @@
    <div class="container my-5 py-5 px-lg-5">
         <div class="row g-5 py-5">
           <div class="container">  
-            <div class="section-title position-relative text-center mb-5 pb-2">
-              <h1 >מקורות מידע</h1>                
+            <div class="section-title position-relative text-start mb-5 pb-2">
+              <h2 >מקורות מידע</h2>                
           </div>
+          <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
         </div>
      </div>
      </div>
@@ -97,19 +98,19 @@
    </div>
    </header>    
    <Main class="p-4">
-    <h4 class="p-3">בחרו נושא ללמידה</h4>
-    <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-center align-items-center">
+        <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-center align-items-center">
       <div class="col">
         <div class="card">
           <div class="cardInnerPage">
           <img src="/images/Group 86.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
             <h5 class="card-title">מבנה המאמר האקדמי</h5>
-            <p class="card-text"> כיצד להגיע לפורטל הספרייה דרך עמדת המידע</p> 
+            <p class="card-text"> הסבר על מאפייני המאמר האקדמי</p> 
           </div>
-          <div>
-            <span class="badge badge-pill badge-light">לומדה</span>
-            <span class="badge badge-pill badge-light">3 דקות</span> 
+          <div class="p-3">
+            <span class="badge badge-pill badge-light w-auto">לומדה</span>
+            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
+              3 דקות</span> 
           </div>
         </div>
       </div>
@@ -119,8 +120,13 @@
           <div class="cardInnerPage">
           <img src="/images/Group 87.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">מסמך</h5>
-            <p class="card-text">היכרות עם קטלוג הספרייה</p>
+            <h5 class="card-title">סוגי מקורות מידע</h5>
+            <p class="card-text">הסבר על סוגי מקורות המידע השונים: ספרים, פרויקטי גמר, סוגי מאמרים, ספרים אלקטרוניים ועוד...</p>
+          </div>
+          <div class="p-3">
+            <span class="badge badge-pill badge-light w-auto">לומדה</span>
+            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
+              3 דקות</span> 
           </div>
         </div>
       </div>
@@ -130,8 +136,13 @@
           <div class="cardInnerPage">
           <img src="/images/Group 88.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">לומדה</h5>
-            <p class="card-text">אפשרויות החיפוש בקטלוג הספרייה</p>
+            <h5 class="card-title">הערכת מידע האינטרנט</h5>
+            <p class="card-text">אופן הערכת מידע באינטרנט ובדיקת אמינות המידע</p>
+          </div>
+          <div class="p-3">
+            <span class="badge badge-pill badge-light w-auto">לומדה</span>
+            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
+              3 דקות</span> 
           </div>
           </div>
         </div>
