--- a/startpage.html
+++ b/startpage.html
@@ -86,9 +86,11 @@
    <div class="container my-5 py-5 px-lg-5">
         <div class="row g-5 py-5">
           <div class="container">  
-            <div class="section-title position-relative text-center mb-5 pb-2">
-              <h1 >איך מתחילים לחפש?</h1>                
+            <div class="section-title position-relative text-start mb-5 pb-2">
+              <h2 >איך מתחילים לחפש?</h2>                
           </div>
+          <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
+
         </div>
      </div>
      </div>
@@ -97,8 +99,7 @@
    </div>
    </header>    
    <Main class="p-4">
-    <h4 class="p-3">בחרו נושא ללמידה</h4>
-    <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-center align-items-center">
+        <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-center align-items-center">
       <div class="col">
         <div class="card">
           <div class="cardInnerPage">
@@ -106,6 +107,11 @@
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
             <h5 class="card-title">פורטל הספרייה</h5>
             <p class="card-text">היכרות בסיסית עם הפורטל והסבר על אופן ההתחברות מעמדת המידע</p>
+          </div>
+          <div class="p-3">
+            <span class="badge badge-pill badge-light w-auto">סרטון</span>
+            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
+              3 דקות</span> 
           </div>
         </div>
       </div>
@@ -117,6 +123,11 @@
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
             <h5 class="card-title">קטלוג הספרייה</h5>
             <p class="card-text">היכרות בסיסית עם קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו:חיפוש ספרים, מאמרים ופרויקטי גמר</p>
+          </div>
+          <div class="p-3">
+            <span class="badge badge-pill badge-light w-auto">סרטון</span>
+            <span class="badge badge-pill badge-light w-auto"><i class="bi bi-clock"></i>
+              3 דקות</span> 
           </div>
         </div>
       </div>
