--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <div class="header pb-0">
     <div class="container-xxl py-lg-1 mb-5">
       <div class="container my-5 px-lg-5">
-        <div class="row g-5 py-5">
+        <div class="row g-5 py-lg-5">
           <div class="col-lg-6 text-sm-start text-lg-start" style="color: #301a4b;">
             <h1 class="mb-4 pt-4">כיף שהצטרפתם!</h1>
             <h5>ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
@@ -120,8 +120,8 @@
 
   <main>
     <div class="container">
-      <h5 class="mt-2 pb-4 pr-3" style="color: #301a4b;">איזה נושא תרצו ללמוד היום?</h5>
-  <div class="row">
+      <h5 class="mt-2 pb-4 pr-3" style="color: #301a4b; margin-right: 20px;">איזה נושא תרצו ללמוד היום?</h5>
+      <div class="row">
     <div class="col-sm-4 pb-4">
       <div class="card-wrapper">
         <a href="startpage.html"  class="text-decoration-none">
@@ -218,7 +218,7 @@
         <a class="text-black">צור קשר</a>
         <p class="text-center">ניתן לפנות לצוות הספרייה במייל: Library@hit.ac.il</p>
       </div>
-      <div class="text-center mt-3">
+      <div class="mobileFooter text-center mt-3">
         <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
           הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
         <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
