--- a/resourcesTypes.html
+++ b/resourcesTypes.html
@@ -107,7 +107,7 @@
     <div class="pt-3">
     <nav aria-label="breadcrumb ">
       <ol class="breadcrumb justify-content-start">
-        <li class="breadcrumb-item active"><a href="index.html" class="my-link">ראשי</a></li>
+        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
         <li class="breadcrumb-item" aria-current="page">מקורות מידע</li>
        </ol>
        </nav> 
@@ -179,6 +179,7 @@
   
   
 
+
   <footer class="footer rtl-footer-bg py-3 d-flex">
     <div class="container">
       <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
@@ -201,7 +202,7 @@
           <a class="text-black">צור קשר</a>
           <p class="text-center">ניתן לפנות לצוות הספרייה במייל: Library@hit.ac.il</p>
         </div>
-        <div class="text-center mt-3">
+        <div class="mobileFooter text-center mt-3">
           <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
             הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
           <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
