--- a/startpage.html
+++ b/startpage.html
@@ -102,19 +102,19 @@
 <header>
 <div class="header">
   <div class="headerinpage">
-  <div class="container-xxl py-5 hero-header">
+  <div class="container-xxl py-lg-5 hero-header">
     <!--פירורי לחם-->
     <div class="pt-3">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb justify-content-start">
-        <li class="breadcrumb-item active"><a href="index.html" class="my-link">ראשי</a></li>
+        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
         <li class="breadcrumb-item" aria-current="page">איך מתחילים</li>
        </ol>
        </nav> 
       </div>
         <!--סוף פירורי לחם-->
-   <div class="container my-5 py-5 px-lg-5">
-        <div class="row g-5 py-5">
+   <div class="container my-lg-5 py-5 px-lg-5">
+        <div class="row g-5 py-lg-5">
           <div class="container">  
             <div class="section-title position-relative text-start mb-5 pb-2">
               <h2 >איך מתחילים לחפש?</h2>                
@@ -165,6 +165,7 @@
 
   
 
+
 <footer class="footer rtl-footer-bg py-3 d-flex">
   <div class="container">
     <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
@@ -187,7 +188,7 @@
         <a class="text-black">צור קשר</a>
         <p class="text-center">ניתן לפנות לצוות הספרייה במייל: Library@hit.ac.il</p>
       </div>
-      <div class="text-center mt-3">
+      <div class="mobileFooter text-center mt-3">
         <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
           הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
         <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
