--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -106,7 +106,7 @@
     <div class="pt-3">
     <nav aria-label="breadcrumb ">
       <ol class="breadcrumb justify-content-start">
-        <li class="breadcrumb-item active"><a href="index.html" class="my-link">ראשי</a></li>
+        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
         <li class="breadcrumb-item" aria-current="page">חיפוש מאמרים</li>
        </ol>
        </nav> 
@@ -176,6 +176,7 @@
 </Main>
 
 
+
 <footer class="footer rtl-footer-bg py-3 d-flex">
   <div class="container">
     <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
@@ -198,7 +199,7 @@
         <a class="text-black">צור קשר</a>
         <p class="text-center">ניתן לפנות לצוות הספרייה במייל: Library@hit.ac.il</p>
       </div>
-      <div class="text-center mt-3">
+      <div class="mobileFooter text-center mt-3">
         <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
           הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
         <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
