--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="keywords" content="טכנולוגיות למידה, הדרכות " />
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <!--לוגו עמוד-->
-   <!-- <link rel="shortcut icon" type="image/png" href="">
-  <link rel="icon" type="image/png" href="">-->
+    <link rel="icon" type="image/png" href="/images/Logo 3.png">
+
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
@@ -129,7 +130,7 @@
         <img src="images/Group 103.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">איך מתחילים</h5>
-          <p class="card-text">כיצד להגיע לפורטל הספרייה דרך עמדת המידע, כניסה והצגת הממשק, היכרות עם קטלוג הספרייה
+          <p class="card-text">פורטל הספרייה וקטלוג הספרייה מציעים מאגר חיפוש של ספרים, מאמרים ופרויקטי גמר וביצוע של מגוון פעולות ישירות מעמדת המידע באופן מהיר ופשוט.
           </p>
         </div>
       </div>
@@ -143,7 +144,7 @@
         <img src="images/Group 105.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">סוגי מקורות מידע</h5>
-          <p class="card-text"> מבנה של מאמר אקדמי, סוגי מקורות מידע, ספר, פרויקטי גמר. הערכת מידע באינטרנט. 
+          <p class="card-text">כדי לחפש מקורות מידע רלוונטיים באופן מקוון חשוב להכיר את מבנה המאמר האקדמי, את סוגי מקורות המידע האקדמיים הקיימים ולבצע הערכה של אמינות המקורות באינטרנט בהתאם.
           </p>
         </div>
       </div>
@@ -157,7 +158,7 @@
         <img src="images/Group 106.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">מאגרי מידע</h5>
-          <p class="card-text">מהו מאגר מידע, רשימה של כלל מאגרי המידע הקיימים, היכרות עם מאגרי מידע על פי תחומים.
+          <p class="card-text">על מנת לבצע חיפוש יעיל במאגרי המידע חשוב להכיר את ההבדלים בין המאגרים, היתרונות והחסרונות והחלוקה לתחומי דעת של כל מאגר והמידע העיקרי המופיע בו. 
           </p>
         </div>
       </div>
@@ -171,8 +172,7 @@
         <img src="images/Group 108.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">חיפוש מאמרים</h5>
-          <p class="card-text">חיפוש יעיל ונכון בשפה האנגלית, שיטות ואסטרטגיות לחיפוש יעיל אופרטורים, לוגיקה בוליאנית, מילות מפתח 
-          </p>
+          <p class="card-text">ישנם מספר מושגים בסיסיים שחשוב להכיר ולדעת כיצד ליישם אותם כדי לייעל את תהליך החיפוש. כגון: אופרטורים בוליאניים AND-OR-NOT, מילות מפתח, מילים נרדפות ועוד.</p>
         </div>
       </div>
         </a>
@@ -185,7 +185,7 @@
         <img src="images/Group 109.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">רשימה ביבליוגרפית</h5>
-          <p class="card-text"> הסגנונות לכתיבת רשימה ביביליוגרפית, כללי ציטוט, כלים טכנולוגיים ליצירת רשימה ביבליוגרפית.
+          <p class="card-text">כיום בכל עבודה אקדמית ישנה דרישת חובה ליצירת רשימה ביבליוגרפית. כדי ליצור רשימה ביבליוגרפית באופן קל ופשוט חשוב להכיר את כללי הציטוט ולהיעזר בכלים טכנולוגיים ליצירת רשימה ביבליוגרפית.
           </p>
         </div>
       </div>
@@ -194,13 +194,13 @@
     </div>
   </div>
 </div>
-</Main>
+</main>
 
 <footer class="footer rtl-footer-bg py-3 d-flex">
   <div class="container">
     <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
       <a class="text-black text-center" href="about.html">אודות</a>
-      <div class="col-md-1 text-center">
+      <div class="col-md-1 text-center"  style="width:max-content">
         <a class="text-black">תכנים</a>
         <div class="text-lg-start">
         <ul class="list-unstyled">
@@ -212,7 +212,7 @@
         </ul>
       </div>
       </div>
-      <a class="text-black text-center" href="faq.html">שאלות נפוצות</a>
+      <a class="text-black text-center"  href="faq.html">שאלות נפוצות</a>
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
       <div class="text-center mt-3">
         <a class="text-black">צור קשר</a>
@@ -222,6 +222,8 @@
         <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
           הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
         <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
+        <p>&copy; כל הזכויות שמורות למכון הטכנולוגי HIT</p>
+
       </div>
     </div>
   </div>
