--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="טכנולוגיות למידה, הדרכות " />
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image" href="/images/Logo 3.png">
+
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
@@ -113,7 +115,7 @@
        </div>
         <!--סוף פירורי לחם-->
    <div class="container my-5 py-5 px-lg-5">
-        <div class="row g-5 py-5">
+        <div class="row g-5 py-lg-5">
           <div class="container">  
             <div class="section-title position-relative text-start mb-5 pb-2">
               <h2 >חיפוש מאמרים</h2>                
@@ -130,9 +132,9 @@
    <Main>
     <div class="container p-4">
       <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5> 
-    <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-start align-items-center">
+    <div class="row row-cols-1 row-cols-md-4 g-4 justify-content-start align-items-center">
       <div class="col pb-4">
-        <div class="card ">
+        <div class="card cardInnerPage">
           <img src="/images/Group 92.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">חיפוש מתקדם במאגרי מידע</h5>
@@ -146,7 +148,7 @@
       </div>
       </div>
       <div class="col pb-4">
-        <div class="card "  id="tobooleanRise">
+        <div class="card cardInnerPage"  id="tobooleanRise">
           <img src="/images/Group 93.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">אופרטורים בוליאניים</h5>
@@ -159,12 +161,11 @@
         </div>
       </div>
       <div class="col pb-4">
-        <div class="card " id="toEnglishSearchRise">
+        <div class="card cardInnerPage"  id="toEnglishSearchRise">
           <img src="/images/Group 95.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" style="min-height: 110px;">
-            <h5 class="card-title">חיפוש יעיל בשפה האנגלית</h5>
-            <p class="card-text">שימוש נכון ופרקטי בשפה האנגלית מסייע בייעול החיפוש וסינון עומס המידע המתקבל במאגרים המקוונים השונים </p>
-          </div>
+            <h5 class="card-title">חיפוש בשפה האנגלית</h5>
+            <p class="card-text">שימוש נכון במילות מפתח בשפה האנגלית ובכלים טכנולוגיים המסייעים בהרחבת מילות החיפוש עתיד לקצר את תהליך החיפוש באופן משמעותי</div>
           <div class="p-3">
             <span class="badge badge-pill badge-light w-auto">לומדה</span>
             <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
@@ -176,12 +177,11 @@
 </Main>
 
 
-
 <footer class="footer rtl-footer-bg py-3 d-flex">
   <div class="container">
     <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
       <a class="text-black text-center" href="about.html">אודות</a>
-      <div class="col-md-1 text-center">
+      <div class="col-md-1 text-center"  style="width:max-content">
         <a class="text-black">תכנים</a>
         <div class="text-lg-start">
         <ul class="list-unstyled">
@@ -193,7 +193,7 @@
         </ul>
       </div>
       </div>
-      <a class="text-black text-center" href="faq.html">שאלות נפוצות</a>
+      <a class="text-black text-center"  href="faq.html">שאלות נפוצות</a>
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
       <div class="text-center mt-3">
         <a class="text-black">צור קשר</a>
@@ -203,6 +203,8 @@
         <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
           הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
         <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
+        <p>&copy; כל הזכויות שמורות למכון הטכנולוגי HIT</p>
+
       </div>
     </div>
   </div>
