--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="טכנולוגיות למידה, הדרכות " />
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+ <!--לוגו עמוד-->
+ <link rel="icon" type="image/png" href="/images/Logo 3.png">
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
@@ -111,10 +113,10 @@
        </nav> 
       </div>
         <!--סוף פירורי לחם-->
-   <div class="container my-5 py-5 px-lg-5">
-        <div class="row g-5 py-5">
-          <div class="container">  
-            <div class="section-title position-relative text-center mb-5 pb-2">
+        <div class="container my-lg-5 py-5 px-lg-5">
+          <div class="row g-5 py-lg-5">
+            <div class="container">  
+              <div class="section-title position-relative text-start mb-5 pb-2">
               <h1 >אודות</h1>                
           </div>
         </div>
@@ -129,12 +131,11 @@
 </Main>
 
   
-
 <footer class="footer rtl-footer-bg py-3 d-flex">
   <div class="container">
     <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
       <a class="text-black text-center" href="about.html">אודות</a>
-      <div class="col-md-1 text-center">
+      <div class="col-md-1 text-center"  style="width:max-content">
         <a class="text-black">תכנים</a>
         <div class="text-lg-start">
         <ul class="list-unstyled">
@@ -146,7 +147,7 @@
         </ul>
       </div>
       </div>
-      <a class="text-black text-center" href="faq.html">שאלות נפוצות</a>
+      <a class="text-black text-center"  href="faq.html">שאלות נפוצות</a>
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
       <div class="text-center mt-3">
         <a class="text-black">צור קשר</a>
@@ -156,6 +157,8 @@
         <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
           הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
         <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
+        <p>&copy; כל הזכויות שמורות למכון הטכנולוגי HIT</p>
+
       </div>
     </div>
   </div>
