--- a/bibList.html
+++ b/bibList.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="טכנולוגיות למידה, הדרכות " />
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+ <!--לוגו עמוד-->
+ <link rel="icon" type="image/png" href="/images/Logo 3.png">
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
@@ -112,10 +114,10 @@
        </nav> 
     </div>
         <!--סוף פירורי לחם-->
-   <div class="container my-5 py-5 px-lg-5">
-        <div class="row g-5 py-5">
-          <div class="container">  
-            <div class="section-title position-relative text-start mb-5 pb-2">
+        <div class="container my-lg-5 py-5 px-lg-5">
+          <div class="row g-5 py-lg-5">
+            <div class="container">  
+              <div class="section-title position-relative text-start mb-5 pb-2">
               <h2>רשימה ביבליוגרפית</h2>                
           </div>
         </div>
@@ -128,9 +130,9 @@
    <Main class="p-4">
     <div class="container">
       <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
-    <div class="row row-cols-1 row-cols-md-5 justify-content-lg-start justify-content-center align-items-center">
+    <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
-        <div class="card">
+        <div class="card cardInnerPage">
           <img src="/images/Group 99.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">כללי ציטוט</h5>
@@ -144,7 +146,7 @@
         </div>
       </div>
       <div class="col pb-4">
-        <div class="card">
+        <div class="card cardInnerPage">
           <img src="/images/Group 100.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">שימוש בכלים טכנולוגיים</h5>
@@ -163,12 +165,11 @@
 
   
 
-
 <footer class="footer rtl-footer-bg py-3 d-flex">
   <div class="container">
     <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
       <a class="text-black text-center" href="about.html">אודות</a>
-      <div class="col-md-1 text-center">
+      <div class="col-md-1 text-center"  style="width:max-content">
         <a class="text-black">תכנים</a>
         <div class="text-lg-start">
         <ul class="list-unstyled">
@@ -180,7 +181,7 @@
         </ul>
       </div>
       </div>
-      <a class="text-black text-center" href="faq.html">שאלות נפוצות</a>
+      <a class="text-black text-center"  href="faq.html">שאלות נפוצות</a>
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
       <div class="text-center mt-3">
         <a class="text-black">צור קשר</a>
@@ -190,6 +191,8 @@
         <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
           הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
         <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
+        <p>&copy; כל הזכויות שמורות למכון הטכנולוגי HIT</p>
+
       </div>
     </div>
   </div>
