--- a/startpage.html
+++ b/startpage.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="טכנולוגיות למידה, הדרכות " />
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image" href="/images/Logo 3.png">
+
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
@@ -127,12 +129,12 @@
    </div>
    </header>    
 
-   <Main class="p-4">
+   <main class="p-4">
     <div class="container">
     <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
-    <div class="row row-cols-1 row-cols-md-5 justify-content-lg-start justify-content-center align-items-center">
+    <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
-        <div class="card">
+        <div class="card cardInnerPage">
           <img src="/images/Group 84.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">פורטל הספרייה</h5>
@@ -146,12 +148,11 @@
       </div>
       </div>
       <div class="col pb-4">
-        <div class="card">
+        <div class="card cardInnerPage">
           <img src="/images/Group 85.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">קטלוג הספרייה</h5>
-            <p class="card-text">היכרות בסיסית עם קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו:חיפוש ספרים, מאמרים ופרויקטי גמר</p>
-          </div>
+            <p class="card-text"> קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו: חיפוש ספרים, מאמרים ופרויקטי גמר</div>
           <div class="p-3">
             <span class="badge badge-pill badge-light w-auto">סרטון</span>
             <span class="badge badge-pill badge-light w-auto"> 
@@ -161,7 +162,7 @@
       </div> 
     </div>
   </div>
-</Main>
+</main>
 
   
 
@@ -170,7 +171,7 @@
   <div class="container">
     <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
       <a class="text-black text-center" href="about.html">אודות</a>
-      <div class="col-md-1 text-center">
+      <div class="col-md-1 text-center"  style="width:max-content">
         <a class="text-black">תכנים</a>
         <div class="text-lg-start">
         <ul class="list-unstyled">
@@ -182,7 +183,7 @@
         </ul>
       </div>
       </div>
-      <a class="text-black text-center" href="faq.html">שאלות נפוצות</a>
+      <a class="text-black text-center"  href="faq.html">שאלות נפוצות</a>
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
       <div class="text-center mt-3">
         <a class="text-black">צור קשר</a>
@@ -192,6 +193,8 @@
         <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון
           הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
         <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
+        <p>&copy; כל הזכויות שמורות למכון הטכנולוגי HIT</p>
+
       </div>
     </div>
   </div>
