--- a/dataBases.html
+++ b/dataBases.html
@@ -133,8 +133,11 @@
   </div>
    </div>
    </header>    
-   <Main class="p-4">
-    <div class="container">
+   
+   <main>
+    <div class="position-relative">
+    <img src="images/Group.png" class="background-image">
+    <div class="container p-4 myCardsContainer">
       <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
@@ -174,11 +177,11 @@
           </div>
           <div class="p-3">
             <span class="badge badge-pill badge-light w-auto">לומדה</span>
-            <span class="badge badge-pill badge-light w-auto"> 
-              3 דקות</span> 
+            <span class="badge badge-pill badge-light w-auto"> 3 דקות</span> 
           </div>
           </div>
         </div>
+    </div>
     </div>
     </div>
 </Main>
