--- a/startpage.html
+++ b/startpage.html
@@ -129,10 +129,10 @@
    </div>
    </header>    
 
-   <main class="p-4">
+   <main>
     <div class="position-relative">
-    <img src="images/Vector.png" class="background-image">
-    <div class="container">
+    <img src="images/Vector4.png" class="background-image">
+    <div class="container p-4 myCardsContainer">
     <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
