--- a/bibList.html
+++ b/bibList.html
@@ -126,9 +126,13 @@
     </div>
   </div>
    </div>
-   </header>    
-   <Main class="p-4">
-    <div class="container">
+   </header>   
+   
+   
+   <main>
+    <div class="position-relative">
+    <img src="images/Group 38.png" class="background-image">
+    <div class="container p-4 myCardsContainer">
       <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
@@ -159,6 +163,7 @@
           </div>
       </div>
       </div>
+    </div>
     </div>
     </div>
 </Main>
