--- a/resourcesTypes.html
+++ b/resourcesTypes.html
@@ -129,9 +129,11 @@
    </div>
    </header>    
 
-   <Main class="p-4">
-    <div class="container">
-    <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
+   <Main>
+    <div class="position-relative">
+      <img src="images/Vector (1).png" class="background-image">
+      <div class="container p-4 myCardsContainer">
+        <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
         <div class="card cardInnerPage">
@@ -176,6 +178,7 @@
         </div>
       </div>
     </div>
+    </div> 
     </div>
   </Main>
   
