--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -94,10 +94,7 @@
   </div>
 </nav>
 
-
-
 <!--תפריט ניווט סוף-->
-
 
 <header>
 <div class="header">
@@ -113,9 +110,9 @@
        </nav> 
        </div>
         <!--סוף פירורי לחם-->
-   <div class="container my-5 py-5 px-lg-5">
-        <div class="row g-5 py-lg-5">
-          <div class="container">  
+        <div class="container my-lg-5 py-5 px-lg-5">
+          <div class="row g-5 py-lg-5">
+            <div class="container">  
             <div class="section-title position-relative text-start mb-5 pb-2">
               <h2 >חיפוש מאמרים</h2>                
           </div>
@@ -128,11 +125,13 @@
    </header>    
 
 
-   <main>
-    <div class="container p-4">
-      <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5> 
-    <div class="row row-cols-1 row-cols-md-4 g-4 justify-content-start align-items-center">
-      <div class="col pb-4">
+   <main class="p-4">
+    <div class="position-relative">
+      <img src="images/Vector.png" class="background-image">
+      <div class="container p-4 myCardsContainer">
+        <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5> 
+      <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
+        <div class="col pb-4">
         <div class="card cardInnerPage">
           <img src="/images/Group 92.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column">
@@ -173,6 +172,7 @@
       </div>
     </div>
   </div>
+    </div>
 </main>
 
 
